@@ -179,6 +179,7 @@ class ErrorCode:
     restart_file_not_found = 39
     gio_not_available = 40
     source_dir_mismatch = 42 # 41 is reserved for par2
+    ftps_lftp_missing = 43
 
     # 50->69 reserved for backend errors
     backend_error = 50
